# Texter

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Texter.sln  configure.bat
Debug/: Texter.ilk
Texter/: Main.cpp  Main.h  Renderer.cpp  Renderer.h  ShaderBase.cpp  ShaderBase.h  Texter.vcxproj  Texter.vcxproj.filters  TextureHelpers.cpp  TextureHelpers.h
Texter/TexterRenderer/: Renderer.cpp  Renderer.h  VertexArrayObject.cpp  VertexArrayObject.h  VertexBufferDescription.cpp  VertexBufferDescription.h  VertexHelpers.cpp  VertexHelpers.h  indicesHelpers.cpp  indicesHelpers.h
Texter/TexterRenderer/ShaderCore/: ShaderBase.cpp  ShaderCore.cpp  ShaderCore.h
Texter/TexterRenderer/TextureClass/: TextureBase.h  TextureHelpers.cpp  TextureHelpers.h
Texter/TexterRenderer/TextureClass/TextureLibraries/stb_image/: stb_image.cpp
Texter/TexterRenderer/VertexHelpers/: Debug.h  IndexBufferHelpers.cpp  VertexBufferLayout.h
Texter/res/shaders/: FragShader.shader  FragShaderUniform.shader  MainShader.shader  VertShader.shader  VertexShader.shader
